2006-08-18 [paul]	1.12.1cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	1.12.1

	1.12.1 released

2006-06-06 [wwp]	1.12.0cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/plugin.c
	* src/plugin_gtk.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	1.12.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-04-07 [colin] 	1.12

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-02-12 [colin]	1.11

	* Check for mainwin before using it

2006-01-14 [colin]	1.10

	* Fix bug #883

2006-01-14 [colin]	1.9

	* HIGify buttons

2006-01-12 [colin]	1.7

	* Merge mailmbox and mailmbox_gtk

2006-01-12 [colin]	1.6

	* Fix braindead FolderClass initialisation that leads to
	  crashes as soon as the folder API changes

2005-12-15 [paul]	1.5

	* Add plugin_version()

2005-12-07 [colin]      1.4

	* Add plugin_licence()
	
2006-10-05 [colin] 	1.3

	* src/plugin_gtk.c
		reflect API change

2005-07-17 [paul]	1.2
		
	* src/plugin_gtk.c
		update for changes to alertpanels

2005-07-05 [colin]	1.1

	* fix missing unregistration on plugin unload

2005-01-26 [alfons]	1.0

	* support GTK/GLIB 2 + folder view changes

2004-03-17 [alfons]	0.12

	* src/mailmbox_folder.c
		commit changes when folder is closed

2004-03-17 [alfons]	0.11

	* src/mailmbox.c
		hack at CRLF badness; definitely need some verifying
		by hoa, but it seems to WFM, finally

2004-03-16 [alfons]	0.10

	lend hoa a hand and fix Folder interface breakage

	* src/plugin.c
		bump up required claws version
	* src/mailmbox_folder.c
		re-order mailmbox folder vtable

2004-03-15 [alfons]	0.9

	* src/mailmbox_folder.c
		fix interface breakage

2003-12-11 [paul]	0.8

	* Makefile.am
		add 'distdir' and 'release'
		
	* configure.ac
	  src/Makefile.am
	  	update

2003-12-10 [hoa]	0.7
