@@ -2,3 +2,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/.cvsignore;  cvs diff -u -r 1.3.2.4 -r 1.3.2.5 src/Makefile.am;  cvs diff -u -r -1.1.2.1 -r -1.1.2.2 src/plugin_version.h.in;  cvs diff -u -r 1.4.2.7 -r 1.4.2.8 src/plugin.c;  cvs diff -u -r 1.4.2.12 -r 1.4.2.13 src/plugin_gtk.c;  ) > 1.12.0cvs2.patchset
 ( cvs diff -u -r 1.8.2.18 -r 1.8.2.19 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/.cvsignore;  cvs diff -u -r 1.3.2.4 -r 1.3.2.5 src/Makefile.am;  cvs diff -u -r -1.1.2.1 -r -1.1.2.2 src/plugin_version.h.in;  cvs diff -u -r 1.4.2.7 -r 1.4.2.8 src/plugin.c;  cvs diff -u -r 1.4.2.12 -r 1.4.2.13 src/plugin_gtk.c;  ) > 1.12.0cvs2.patchset
 ( cvs diff -u -r 1.8.2.20 -r 1.8.2.21 configure.ac;  ) > 1.12.1cvs1.patchset
+( cvs diff -u -r 1.4.2.8 -r 1.4.2.9 src/plugin.c;  ) > 1.12.1cvs2.patchset
